# sgl

./: .hgignore  .hgsubstate  CMakeLists.txt  Configure.cmake  FindNecessaryLibraries.cmake  android.toolchain.cmake
Android/: android.toolchain.cmake
CMakeModules/: BuildFlags.cmake  Doxy.cmake  PrecompiledHeaders.cmake
SimpleGL/: CMakeLists.txt  Configure.cmake  FindNecessaryLibraries.cmake  copy_data.bat
SimpleGL/examples/: CMakeLists.txt
SimpleGL/examples/Fractal/: CMakeLists.txt
SimpleGL/examples/Fractal/src/: CMakeLists.txt  main.cpp
SimpleGL/examples/MarchingCubes/include/: Tables.h
SimpleGL/examples/MarchingCubes/src/: CMakeLists.txt
SimpleGL/examples/PostProcess/: CMakeLists.txt
SimpleGL/examples/PostProcess/src/: CMakeLists.txt  main.cpp
SimpleGL/examples/QtGUI/: CMakeLists.txt
SimpleGL/examples/QtGUI/include/: GUICube.h  SGLWidget.h  Scene.h
SimpleGL/examples/QtGUI/src/: CMakeLists.txt  SGLWidget.cpp  Scene.cpp  main.cpp
SimpleGL/examples/RenderToVBO/src/: CMakeLists.txt  main.cpp
SimpleGL/examples/SkeletalAnimation/src/: CMakeLists.txt  main.cpp
SimpleGL/examples/data/Shaders/: frag_test.frag  marching_cubes.frag  transform.vert
SimpleGL/sgl/: BlendState.h  Buffer.h  Config.h.cmake  Device.h  DeviceTraits.h  Font.h  Image.h  Program.h  RasterizerState.h  RenderTarget.h  SamplerState.h  Shader.h  Texture.h  Texture3D.h  Types.h  Uniform.h  VBORenderTarget.h
SimpleGL/sgl/GL/: GLBlendState.h  GLBuffer.h  GLCommon.h  GLDepthStencilState.h  GLDevice.h  GLFFPProgram.h  GLFFPUniform.h  GLFont.h  GLIndexBuffer.h  GLRenderTarget.h  GLShader.h  GLTexture.h  GLTexture2D.h  GLTexture3D.h  GLTextureCube.h  GLUniform.h  GLUtility.h  GLVertexBuffer.h
SimpleGL/sgl/Math/: AABB.hpp  Base.hpp  FPT.hpp  Frustum.hpp  KDop.hpp  Matrix.hpp  MatrixFunctions.hpp  Plane.hpp  Quaternion.hpp  Utility.hpp  Vector.hpp
SimpleGL/sgl/Utility/: Aligned.h  Containers.hpp  DLLInterface.h  Error.h  IfThenElse.h  IlImage.h
SimpleGL/sgl/Utility/FX/: ShaderUtility.h
SimpleGL/src/: CMakeLists.txt  Device.cpp
SimpleGL/src/GL/: GLBlendState.cpp  GLCommon.cpp  GLDepthStencilState.cpp  GLDevice.cpp  GLDeviceTraits.cpp  GLFFPProgram.cpp  GLFFPUniform.cpp  GLFont.cpp  GLIndexBuffer.cpp  GLProgram.cpp  GLRasterizerState.cpp  GLRenderTarget.cpp  GLSamplerState.cpp  GLShader.cpp  GLStreamOut.cpp  GLTexture.cpp  GLTexture1D.cpp  GLTexture2D.cpp  GLTexture3D.cpp  GLTextureCube.cpp  GLUniform.cpp  GLUniformBuffer.cpp  GLVertexBuffer.cpp  GLVertexLayout.cpp
SimpleGL/src/Utility/: Error.cpp  IlImage.cpp  Referenced.cpp
examples/: CMakeLists.txt
examples/Fractal/src/: CMakeLists.txt  main.cpp
examples/MarchingCubes/: CMakeLists.txt
examples/MarchingCubes/src/: CMakeLists.txt  main.cpp
examples/PostProcess/src/: CMakeLists.txt
examples/QtGUI/include/: GraphicsView.h
examples/QtGUI/src/: GUICube.cpp  GraphicsView.cpp  Scene.cpp  main.cpp
examples/RenderToVBO/: CMakeLists.txt
examples/RenderToVBO/src/: CMakeLists.txt
examples/SkeletalAnimation/: CMakeLists.txt
examples/SkeletalAnimation/src/: main.cpp
examples/data/GUI/: settings_form.ui
examples/data/Shaders/: julia.frag  marching_cubes.geom  marching_cubes.vert  r2vb_sphere.frag  skeletal.vert  vtf.vert
include/: BlendState.h  Buffer.h  Config.h.cmake  DepthStencilState.h  Device.h  Font.h  FormatConversion.h  Image.h  IndexBuffer.h  Program.h  RasterizerState.h  Resource.h  SamplerState.h  State.h  TextureCube.h  TextureSampler.h  Types.h  Uniform.h  UniformBuffer.h  VertexLayout.h  View.h
include/GL/: GLBlendState.h  GLBuffer.h  GLCommon.h  GLDepthStencilState.h  GLDevice.h  GLDeviceTraits.h  GLFFPProgram.h  GLFFPUniform.h  GLFont.h  GLForward.h  GLIndexBuffer.h  GLProgram.h  GLRasterizerState.h  GLRenderTarget.h  GLSamplerState.h  GLShader.h  GLStreamOut.h  GLTexture.h  GLTexture1D.h  GLTexture2D.h  GLTexture3D.h  GLTextureCube.h  GLUniform.h  GLUniformBuffer.h  GLUtility.h  GLVBORenderTarget.h  GLVertexBuffer.h  GLVertexLayout.h
include/Math/: AABB.hpp  Base.hpp  Containers.hpp  Frustum.hpp  Intersection.hpp  KDop.hpp  Matrix.hpp  MatrixFunctions.hpp  OBB.hpp  Plane.hpp  Quaternion.hpp  Ray.hpp  Sphere.hpp  Utility.hpp  Vector.hpp
include/Utility/: Aligned.h  Containers.hpp  DLLInterface.h  Error.h  IlImage.h  Meta.h  Referenced.h
sgl/: BlendState.h  Device.h  FFPProgram.h  Program.h  RasterizerState.h  StreamOut.h  Texture2D.h  TextureBuffer.h  Uniform.h  VertexBuffer.h
sgl/GL/: GLBlendState.h  GLBuffer.h  GLDepthStencilState.h  GLDevice.h  GLFFPProgram.h  GLFont.h  GLForward.h  GLIndexBuffer.h  GLProgram.h  GLRasterizerState.h  GLRenderTarget.h  GLSamplerState.h  GLTexture.h  GLTextureBuffer.h  GLUtility.h  GLVertexBuffer.h  GLVertexLayout.h
sgl/Math/: Base.hpp  Containers.hpp  Intersection.hpp  Matrix.hpp  MatrixFunctions.hpp  Quaternion.hpp  Ray.hpp  Sphere.hpp  Vector.hpp
sgl/Utility/: Error.h  Meta.h  Referenced.h
sgl/Utility/FX/: ShaderUtility.h
src/: CMakeLists.txt  Device.cpp
src/GL/: GLBlendState.cpp  GLCommon.cpp  GLDepthStencilState.cpp  GLDevice.cpp  GLDeviceTraits.cpp  GLFFPProgram.cpp  GLFont.cpp  GLIndexBuffer.cpp  GLProgram.cpp  GLRasterizerState.cpp  GLRenderTarget.cpp  GLSamplerState.cpp  GLShader.cpp  GLTexture.cpp  GLTexture2D.cpp  GLTexture3D.cpp  GLTextureBuffer.cpp  GLTextureCube.cpp  GLUniform.cpp  GLVBORenderTarget.cpp  GLVertexBuffer.cpp  GLVertexLayout.cpp
src/Utility/: Error.cpp  IlImage.cpp  RawImage.cpp
