CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (SimpleGL)
SET (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/FindModules;${CMAKE_MODULE_PATH}")

IF (NOT SIMPLE_GL_CONFIGURE_INTRUSIVE)
    SET (RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ENDIF (NOT SIMPLE_GL_CONFIGURE_INTRUSIVE)

IF (MSVC)
    SET (CFG_RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR})
ELSE (MSVC)
    SET (CFG_RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY})
ENDIF (MSVC)

IF (WIN32)
    # setup 3rd party directory as search path
    SET ( SIMPLE_GL_3RD_PARTY_FOUND FALSE )
    IF ( MSVC AND (MSVC_VERSION EQUAL 1600) )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2010 )
        SET ( SIMPLE_GL_3RD_PARTY_FOUND TRUE )
    ELSEIF ( MSVC AND (MSVC_VERSION STREQUAL 1500) )
        SET ( CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008;${CMAKE_PREFIX_PATH}" )
        SET ( 3RD_PARTY_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/msvs_2008 )
        SET ( SIMPLE_GL_3RD_PARTY_FOUND TRUE )
    ENDIF ( MSVC AND (MSVC_VERSION EQUAL 1600) )
    
    IF (SIMPLE_GL_3RD_PARTY_FOUND)
        LIST ( APPEND CMAKE_INCLUDE_PATH 
            ${3RD_PARTY_DIRECTORY}/DevIL/include
            ${3RD_PARTY_DIRECTORY}/GLEW/include
        )

        LIST ( APPEND CMAKE_LIBRARY_PATH 
            ${3RD_PARTY_DIRECTORY}/DevIL/lib
            ${3RD_PARTY_DIRECTORY}/GLEW/lib
        )

        MACRO (COPY_DLLS SOURCE DESTINATION COPY_FILES)
            FOREACH(FILENAME ${${COPY_FILES}})
                FILE (COPY "${SOURCE}/${FILENAME}" DESTINATION "${DESTINATION}")
            ENDFOREACH(FILENAME)
        ENDMACRO (COPY_DLLS)

        SET (DEVIL_DLLS
            DevIL.dll
            ILU.dll
            ILUT.dll
            jpeg.dll
            libpng12-0.dll
            libtiff-3.dll
            zlib1.dll
        )

        SET (GLEW_DLLS
            glew32.dll
            glew32mx.dll
        )

        IF (MSVC)
            FOREACH(CONF ${CMAKE_CONFIGURATION_TYPES})
                COPY_DLLS(${3RD_PARTY_DIRECTORY}/DevIL/lib ${RUNTIME_OUTPUT_DIRECTORY}/${CONF} DEVIL_DLLS)
                COPY_DLLS(${3RD_PARTY_DIRECTORY}/GLEW/bin  ${RUNTIME_OUTPUT_DIRECTORY}/${CONF} GLEW_DLLS)
            ENDFOREACH(CONF)
        ELSE (MSVC)
            COPY_DLLS(${3RD_PARTY_DIRECTORY}/DevIL/lib ${RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE} DEVIL_DLLS)
            COPY_DLLS(${3RD_PARTY_DIRECTORY}/GLEW/bin  ${RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE} GLEW_DLLS)
        ENDIF (MSVC)
    ENDIF (SIMPLE_GL_3RD_PARTY_FOUND)
ENDIF (WIN32)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS TRUE)

ADD_SUBDIRECTORY(SimpleGL)
      