# shared includes
INCLUDE_DIRECTORIES ( ${SDL_INCLUDE_DIR} )

# vars
SET ( EXAMPLE_INSTALL_BINDIR    ${INSTALL_BINDIR}/examples )
SET ( EXAMPLE_DIR               ${PROJECT_SOURCE_DIR}/examples )

# list here all example dirs
IF (BUILD_EXAMPLES)
	ADD_SUBDIRECTORY( Fractal )
	#ADD_SUBDIRECTORY( MarchingCubes )
	#ADD_SUBDIRECTORY( RenderToVBO )
	#ADD_SUBDIRECTORY( SkeletalAnimation)
ENDIF (BUILD_EXAMPLES)

IF (BUILD_QT_EXAMPLES)
	SET (QT_UI_PATH ${EXAMPLE_DIR}/data/GUI)
	
	ADD_SUBDIRECTORY(QtGUI)
ENDIF (BUILD_QT_EXAMPLES)

# copy data on install
IF (INSTALL_EXAMPLES)
    INSTALL ( DIRECTORY data
        DESTINATION     ${EXAMPLE_INSTALL_BINDIR}
        PATTERN         ".*"        EXCLUDE
    )
ENDIF (INSTALL_EXAMPLES)
