# list headers
SET (HEADER_PATH ${EXAMPLE_SOURCE_DIR}/include)
SET ( EXAMPLE_HEADERS
)

# list sources
AUX_SOURCE_DIRECTORY(. EXAMPLE_SOURCES)

# additional includes
INCLUDE_DIRECTORIES ( 
	${OPENGL_INCLUDE_DIR}
	${SDL_INCLUDE_DIR} 
	${GMATH_INCLUDE_DIR}  
)

# glew
IF (WIN32)
	INCLUDE_DIRECTORIES ( 
		${GLEW_INCLUDE_DIR}
	)
ENDIF(WIN32)

# target
IF (SIMPLE_GL_ANDROID)
	ADD_LIBRARY( ${EXAMPLE_NAME} SHARED ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )
	SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES
		FOLDER                      "Examples"
		LIBRARY_OUTPUT_DIRECTORY    "${RUNTIME_OUTPUT_DIRECTORY}"
	)
ELSE (SIMPLE_GL_ANDROID)
	ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )
	SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES
		FOLDER                      "Examples"
		RUNTIME_OUTPUT_DIRECTORY    "${RUNTIME_OUTPUT_DIRECTORY}"
	)
	IF (MSVC)
		SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES 
								PREFIX "../" )
	ENDIF (MSVC)
ENDIF (SIMPLE_GL_ANDROID)

# libraries
IF (SIMPLE_GL_ANDROID)
	TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} 
		${TARGET_NAME}
	)
ELSE (SIMPLE_GL_ANDROID)
	TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} 
		${TARGET_NAME} 
		${SDL_LIBRARY}
	)
ENDIF (SIMPLE_GL_ANDROID)

# install
IF (INSTALL_EXAMPLES)
    INSTALL ( TARGETS ${EXAMPLE_NAME}
        RUNTIME DESTINATION ${EXAMPLE_INSTALL_BINDIR}
    )
ENDIF (INSTALL_EXAMPLES)


