# list headers
SET ( HEADER_PATH ${EXAMPLE_SOURCE_DIR}/include )
SET ( EXAMPLE_HEADERS
)

# list sources
SET ( TARGET_SOURCES
    main.cpp
)

# additional includes
INCLUDE_DIRECTORIES ( 
    ${OPENGL_INCLUDE_DIR}
    ${SDL_INCLUDE_DIR} 
    ${GLEW_INCLUDE_DIR}
)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} ${TARGET_UNIX_NAME} )

# install
IF (INSTALL_EXAMPLES)
    INSTALL ( TARGETS ${EXAMPLE_NAME}
        RUNTIME DESTINATION ${EXAMPLE_INSTALL_BINDIR}
    )
ENDIF (INSTALL_EXAMPLES)


