# generate qt uis
SET (QT_UIS 
	${QT_UI_PATH}/settings_form.ui
)
	
QT4_WRAP_UI(QT_UI_HEADERS ${QT_UIS})

# list headers
SET (HEADER_PATH ${EXAMPLE_SOURCE_DIR}/include)
SET ( EXAMPLE_HEADERS
	${HEADER_PATH}/GraphicsView.h
	${HEADER_PATH}/GUICube.h
	${HEADER_PATH}/Scene.h
	${HEADER_PATH}/SGLWidget.h
	${QT_UI_HEADERS}
)

# list sources
SET (EXAMPLE_SOURCES
	GraphicsView.cpp
	GUICube.cpp
	Scene.cpp
	SGLWidget.cpp
	main.cpp
)

# additional includes
INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_BINARY_DIR} 
	${OPENGL_INCLUDE_DIR}
	${SDL_INCLUDE_DIR} 
	${QT_INCLUDE_DIR}
)

# glew 
IF (WIN32)
	INCLUDE_DIRECTORIES (  
		${GLEW_INCLUDE_DIR}
	)
ENDIF(WIN32)

IF (CMAKE_COMPILER_IS_GNUCC AND SIMPLE_GL_USE_SSE)
	ADD_DEFINITIONS(-mstackrealign)
ENDIF (CMAKE_COMPILER_IS_GNUCC AND SIMPLE_GL_USE_SSE)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} 
    ${TARGET_UNIX_NAME} 
    ${QT_LIBRARIES}
)

# install
IF (INSTALL_EXAMPLES)
    INSTALL ( TARGETS ${EXAMPLE_NAME}
        RUNTIME DESTINATION ${EXAMPLE_INSTALL_BINDIR}
    )
ENDIF (INSTALL_EXAMPLES)


