# list headers
SET (HEADER_PATH ${FRACTAL_SOURCE_DIR}/include)
SET ( EXAMPLE_HEADERS
)

# list sources
SET( EXAMPLE_SOURCES
	main.cpp
)

# additional includes
INCLUDE_DIRECTORIES ( 
	${OPENGL_INCLUDE_DIR}
	${SDL_INCLUDE_DIR} 
	${GMATH_INCLUDE_DIR}  
)

# glew
IF (WIN32)
	INCLUDE_DIRECTORIES ( 
		${GLEW_INCLUDE_DIR}
	)
ENDIF(WIN32)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} 
    ${TARGET_NAME} 
    ${SDL_LIBRARY}
)

# install
IF (INSTALL_EXAMPLES)
    INSTALL ( TARGETS ${EXAMPLE_NAME}
        RUNTIME DESTINATION ${EXAMPLE_INSTALL_BINDIR}
    )
ENDIF (INSTALL_EXAMPLES)


